--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#AFB42B</color>
     <color name="colorAccent">#8BC34A</color>
     <color name="white">#FFFFFF</color>
+    <color name="black">#000000</color>
 </resources>
